tests/vrs/interface/parts/memoryfield_01_field_info_wrong_expected.txt
error: expected `identifier`, found `0`
     --> tests/vrs/interface/parts/memoryfield_01_field_info_wrong.vrs:1:11
      |
    1 |  mem foo [ 0 ] {Layout {}}
      |            ^ help: add `identifier` here.
